--- a/.github/workflows/docker-buildx.yaml
+++ b/.github/workflows/docker-buildx.yaml
@@ -16,8 +16,24 @@ jobs:
       - name: Define image name
         id: image
         run: |
-            IMAGE="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${GITHUB_REF/refs\/tags\//}"
+            IMAGE="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}"
             echo "NAME=$IMAGE" >> $GITHUB_OUTPUT
+      -
+        name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          # list of Docker images to use as base name for tags
+          images: |
+            name/app
+            ghcr.io/username/app
+          # generate Docker tags based on the following events/attributes
+          tags: |
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            type=sha
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -36,7 +52,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: docker/Dockerfile
+          file: Dockerfile
           push: true
-          tags: "${{ steps.image.outputs.NAME }}"
+          tags: ${{ steps.meta.outputs.tags }}
           platforms: linux/amd64,linux/arm64
