--- a/.github/workflows/docker-buildx.yaml
+++ b/.github/workflows/docker-buildx.yaml
@@ -41,8 +41,8 @@ jobs:
         name: Log in to the Container registry
         uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - 
         name: Build and push multiarch image to ghcr
