--- a/.github/workflows/docker-buildx.yaml
+++ b/.github/workflows/docker-buildx.yaml
@@ -30,7 +30,7 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
-            type=sha
+            type=sha,prefix=
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
